implementaçao PUT e DELETE de Postagem

--- a/src/app/edit/tema-edit/tema-edit.component.html
+++ b/src/app/edit/tema-edit/tema-edit.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid p-5 d-flex text-light bg-gr justify-content-center">
 
-    <div class="card p-3" style="border-radius: 20px; width: 80vh;">
+    <div class="cardts p-3" style="border-radius: 20px; width: 80vh;">
         <div class="row">
             <div class="col-md-12">
                 <h1 class="fs-54 text-center">Edit Tag</h1>
