--- a/src/app/delete/postagem-delete/postagem-delete.component.css
+++ b/src/app/delete/postagem-delete/postagem-delete.component.css
@@ -1,15 +1,4 @@
-
-#img-bg {
-    background-image: url('https://i.imgur.com/VDPmGS3.jpg');
-
-    min-height: 300px;
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.cardts {
+.card {
     padding-bottom: 5;
     backdrop-filter: blur(4px) saturate(180%);
     -webkit-backdrop-filter: blur(16px) saturate(180%);
