--- a/src/app/edit/postagem-edit/postagem-edit.component.css
+++ b/src/app/edit/postagem-edit/postagem-edit.component.css
@@ -1,14 +1,3 @@
-
-#img-bg {
-    background-image: url('https://i.imgur.com/VDPmGS3.jpg');
-
-    min-height: 300px;
-
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 .cardts {
     padding-bottom: 5;
     backdrop-filter: blur(4px) saturate(180%);
@@ -16,4 +5,9 @@
     background-color: rgba(17, 25, 40, 0.75);
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
+}
+
+
+.card-body {
+    border-radius: 5px;
 }
