--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -16,7 +16,7 @@
                 </li>
 
                 <li class="nav-item ps-2 pt-3">
-                    <a href="">
+                    <a [routerLink]="['/user-edit', id]">
                         <p class="text-white fs-16">
                             <i class="fa fa-pencil-square" aria-hidden="true"></i>
                         </p>
