--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -48,9 +48,9 @@
             <div class="nav nav-tabs d-flex justify-content-center" style="width: 100%;" id="nav-todasPostagens-tab"
                 role="tablist">
 
-                <button (click)="getAllPostagens()" class="nav-link active" id="nav-todasPostagens-tab" data-bs-toggle="tab"
-                    data-bs-target="#todasPostagens" type="button" role="tab" aria-controls="nav-todasPostagens"
-                    aria-selected="true">Recent Posts</button>
+                <button (click)="getAllPostagens()" class="nav-link active" id="nav-todasPostagens-tab"
+                    data-bs-toggle="tab" data-bs-target="#todasPostagens" type="button" role="tab"
+                    aria-controls="nav-todasPostagens" aria-selected="true">Recent Posts</button>
 
                 <button (click)='findByIdUser()' class="nav-link" id="nav-minhasPostagens-tab" data-bs-toggle="tab"
                     data-bs-target="#minhasPostagens" type="button" role="tab" aria-controls="nav-minhasPostagens"
@@ -70,7 +70,8 @@
                 aria-labelledby="nav-todasPostagens-tab">
 
                 <div class="row row-cols-1 row-cols-md-5 h-100 g-1 d-flex justify-content-center">
-                    <div class="card text-white bg-gr2 border-rounded m-2" *ngFor='let item of listaPostagem'>
+                    <div class="card text-white bg-gr2 border-rounded m-2"
+                        *ngFor='let item of listaPostagem | orderBy: key : reverse'>
 
                         <div class="card-header">
                             <h5 class="card-title">{{item.titulo}}</h5>
@@ -99,7 +100,7 @@
                 data-bs-toggle="tab" data-bs-target="minhasPostagens">
 
                 <div class="row row-cols-1 row-cols-md-5 h-100 g-1 d-flex justify-content-center">
-                    <div class="card text-white bg-gr2 border-rounded m-2" *ngFor='let item of user.postagem'>
+                    <div class="card text-white bg-gr2 border-rounded m-2" *ngFor='let item of user.postagem | orderBy: key : reverse'>
 
                         <div class="card-header">
                             <h5 class="card-title">{{item.titulo}}</h5>
@@ -112,12 +113,15 @@
                         </div>
 
                         <div class="card-footer text-muted">
-                            <p class="card-text"><small class="text-white">{{item.data | date: 'dd/MM/yyyy'}} {{item.data | date: 'HH:mm'}} </small></p>
+                            <p class="card-text"><small class="text-white">{{item.data | date: 'dd/MM/yyyy'}}
+                                    {{item.data | date: 'HH:mm'}} </small></p>
 
-                                    <div class="d-flex justify-content-center pb-2">
-                                        <button [routerLink]="['/postagem-edit', item.id]" class="btn btn-light me-3 ">Edit</button>
-                                        <button [routerLink]="['/postagem-delete', item.id]" class="btn btn-outline-light">Delete</button>
-                                    </div>
+                            <div class="d-flex justify-content-center pb-2">
+                                <button [routerLink]="['/postagem-edit', item.id]"
+                                    class="btn btn-light me-3 ">Edit</button>
+                                <button [routerLink]="['/postagem-delete', item.id]"
+                                    class="btn btn-outline-light">Delete</button>
+                            </div>
                         </div>
 
                     </div>
@@ -129,13 +133,15 @@
             <!--postagem por tema-->
             <div class="tab-pane fade" id="postagemTema" role="tabpanel" aria-labelledby="nav-postagemTema-tab">
 
-                <div class="row row-cols-1 row-cols-md-5 h-100 g-1 d-flex justify-content-center" *ngFor="let tema of listaTemas">
+                <div class="row row-cols-1 row-cols-md-5 h-100 g-1 d-flex justify-content-center"
+                    *ngFor="let tema of listaTemas">
 
-                    <div class="card text-white bg-gr2 border-rounded m-2" *ngFor='let item of tema.postagem'>
+                    <div class="card text-white bg-gr2 border-rounded m-2" *ngFor='let item of tema.postagem | orderBy: key : reverse'>
 
                         <div class="card-header">
                             <h5 class="card-title">{{item.titulo}}</h5>
-                            <p class="card-text"> <small>by: </small> <small class="fw-800">{{item.usuario.nome}}</small></p>
+                            <p class="card-text"> <small>by: </small> <small
+                                    class="fw-800">{{item.usuario.nome}}</small></p>
                         </div>
 
                         <div class="card-body btn-light">
@@ -143,7 +149,8 @@
                         </div>
 
                         <div class="card-footer text-muted ">
-                            <p class="card-text"><small class="text-white">{{item.data | date: 'dd/MM/yyyy'}} {{item.data | date: 'HH:mm'}} </small></p>
+                            <p class="card-text"><small class="text-white">{{item.data | date: 'dd/MM/yyyy'}}
+                                    {{item.data | date: 'HH:mm'}} </small></p>
                         </div>
 
                     </div>
