--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -69,6 +69,18 @@
             <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
                 aria-labelledby="nav-todasPostagens-tab">
 
+                <div class="row d-flex justify-content-center">
+                    <div class="col-md-4">
+
+                        <div class="form-group mb-3 mt-1">
+                            <input type="text" class="form-control" id="tituloPesquisa"
+                                placeholder="Digite um titulo para pesquisar" [(ngModel)]='tituloPost'
+                                (keyup)='findByTituloPostagem()'>
+                        </div>
+
+                    </div>
+                </div>
+
                 <div class="row row-cols-1 row-cols-md-5 h-100 g-1 d-flex justify-content-center">
                     <div class="card text-white bg-gr2 border-rounded m-2"
                         *ngFor='let item of listaPostagem | orderBy: key : reverse'>
@@ -85,6 +97,14 @@
                         </div>
 
                         <div class="card-footer text-muted ">
+
+                            <!-- like -->
+                            <div class="text-left">
+                                <a (click)="findByIdPostagem(item.id)" style="font-size: 30px; cursor: pointer;"
+                                    class=""><i class="fa fa-heart" aria-hidden="true"></i></a>
+                                {{item.curtir}}
+                            </div>
+
                             <p class="card-text"><small class="text-white">{{item.data | date: 'dd/MM/yyyy'}}
                                     {{item.data | date: 'HH:mm'}} </small></p>
                         </div>
@@ -100,7 +120,8 @@
                 data-bs-toggle="tab" data-bs-target="minhasPostagens">
 
                 <div class="row row-cols-1 row-cols-md-5 h-100 g-1 d-flex justify-content-center">
-                    <div class="card text-white bg-gr2 border-rounded m-2" *ngFor='let item of user.postagem | orderBy: key : reverse'>
+                    <div class="card text-white bg-gr2 border-rounded m-2"
+                        *ngFor='let item of user.postagem | orderBy: key : reverse'>
 
                         <div class="card-header">
                             <h5 class="card-title">{{item.titulo}}</h5>
@@ -136,7 +157,8 @@
                 <div class="row row-cols-1 row-cols-md-5 h-100 g-1 d-flex justify-content-center"
                     *ngFor="let tema of listaTemas">
 
-                    <div class="card text-white bg-gr2 border-rounded m-2" *ngFor='let item of tema.postagem | orderBy: key : reverse'>
+                    <div class="card text-white bg-gr2 border-rounded m-2"
+                        *ngFor='let item of tema.postagem | orderBy: key : reverse'>
 
                         <div class="card-header">
                             <h5 class="card-title">{{item.titulo}}</h5>
